@@ -22,6 +22,7 @@ dependencies {
     implementation project(':backend')
     implementation 'org.openjfx:javafx-controls:17'
     implementation 'org.openjfx:javafx-fxml:17'
+    implementation 'org.springframework.boot:spring-boot-starter'
 }
 
 javafx {
@@ -31,4 +32,11 @@ javafx {
 
 springBoot {
     mainClass = 'com.JavaFxAPPS.JavaFxApplication' // Replace with your actual main class
+}
+
+bootRun {
+    jvmArgs = [
+            "--module-path", System.getenv("PATH_TO_FX") ?: "C:/Users/m.alsaif/Desktop/javafx-sdk-17.0.15/lib",
+            "--add-modules", "javafx.controls,javafx.fxml"
+    ]
 }
